feat: search group name
