# internal/handler/course_group.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/opentreehole/backend/data"
 	"github.com/opentreehole/backend/internal/repository"
+	"github.com/opentreehole/backend/internal/schema"
 	"github.com/opentreehole/backend/internal/service"
 )
 
@@ -34,6 +35,9 @@ func (h *courseGroupHandler) RegisterRoute(router fiber.Router) {
 	router.Get("/group/:id<int>", h.GetCourseGroupV1)
 	router.Get("/courses/hash", h.GetCourseGroupHashV1)
 	router.Get("/courses/refresh", h.RefreshCourseGroupHashV1)
+
+	// v3
+	router.Get("/v3/course_groups/search", h.SearchCourseGroupV3)
 
 	// static
 	router.Get("/static/cedict_ts.u8", func(c *fiber.Ctx) error {
@@ -89,9 +93,14 @@ func (h *courseGroupHandler) GetCourseGroupV1(c *fiber.Ctx) (err error) {
 func (h *courseGroupHandler) GetCourseGroupHashV1(c *fiber.Ctx) (err error) {
 	c.Context().SetUserValue("FiberCtx", c)
 
+	_, err = h.accountRepository.GetCurrentUser(c.Context())
+	if err != nil {
+		return
+	}
+
 	response, err := h.courseGroupService.GetCourseGroupHash(c.Context())
 	if err != nil {
-		return err
+		return
 	}
 
 	return c.JSON(response)
@@ -99,7 +108,7 @@ func (h *courseGroupHandler) GetCourseGroupHashV1(c *fiber.Ctx) (err error) {
 
 // RefreshCourseGroupHashV1 godoc
 // @Summary refresh course group hash
-// @Description refresh course group hash
+// @Description refresh course group hash, admin only
 // @Tags CourseGroup
 // @Accept json
 // @Produce json
@@ -111,10 +120,52 @@ func (h *courseGroupHandler) GetCourseGroupHashV1(c *fiber.Ctx) (err error) {
 func (h *courseGroupHandler) RefreshCourseGroupHashV1(c *fiber.Ctx) (err error) {
 	c.Context().SetUserValue("FiberCtx", c)
 
+	user, err := h.accountRepository.GetCurrentUser(c.Context())
+	if err != nil {
+		return err
+	}
+	if !user.IsAdmin {
+		return schema.Forbidden()
+	}
+
 	err = h.courseGroupService.RefreshCourseGroupHash(c.Context())
 	if err != nil {
 		return err
 	}
 
 	return c.SendStatus(fiber.StatusTeapot)
+}
+
+// SearchCourseGroupV3 godoc
+// @Summary search course group
+// @Description search course group, no courses
+// @Tags CourseGroup
+// @Accept json
+// @Produce json
+// @Router /v3/course_groups/search [get]
+// @Param request query schema.CourseGroupSearchV3Request true "search query"
+// @Success 200 {object} schema.PagedResponse[schema.CourseGroupV3Response, any]
+// @Failure 400 {object} schema.HttpError
+// @Failure 404 {object} schema.HttpBaseError
+// @Failure 500 {object} schema.HttpBaseError
+func (h *courseGroupHandler) SearchCourseGroupV3(c *fiber.Ctx) (err error) {
+	c.Context().SetUserValue("FiberCtx", c)
+
+	user, err := h.accountRepository.GetCurrentUser(c.Context())
+	if err != nil {
+		return
+	}
+
+	request := new(schema.CourseGroupSearchV3Request)
+	err = h.ValidateQuery(c, request)
+	if err != nil {
+		return
+	}
+
+	response, err := h.courseGroupService.SearchCourseGroupV3(c.Context(), user, request)
+	if err != nil {
+		return
+	}
+
+	return c.JSON(response)
 }
